--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
+    "react-styled-select": "^3.0.0",
     "redux-logger": "^3.0.6",
     "styled-components": "^5.1.0"
   },
